--- a/dashboard.html
+++ b/dashboard.html
@@ -282,7 +282,7 @@
         .card-title {
             font-size: 1.3rem;
             font-weight: 600;
-            color: --primary-dark);
+            color: var(--primary-dark);
         }
 
         .task-item, .exam-item {
@@ -431,7 +431,7 @@
             visibility: visible;
         }
 
-        /* Tutorial Styles */
+        /* Tutorial Styles - MODIFICADO */
         .tutorial-overlay {
             position: fixed;
             top: 0;
@@ -439,10 +439,11 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.8);
-            z-index: 2000;
+            z-index: 998; /* Reducido para que esté por debajo del menú */
             opacity: 0;
             visibility: hidden;
             transition: all 0.3s ease;
+            pointer-events: none; /* Permitir clics a través del overlay */
         }
 
         .tutorial-overlay.active {
@@ -691,7 +692,7 @@
             <div class="tutorial-menu-item" id="tutorial-trigger">
                 <i class="fas fa-play-circle"></i>
                 <span>Tutorial</span>
-            </a>
+            </div>
         </div>
     </nav>
 
@@ -841,7 +842,7 @@
             themeIcon.className = theme === 'dark' ? 'fas fa-sun' : 'fas fa-moon';
         }
 
-        // Menu Toggle
+        // Menu Toggle - MODIFICADO
         const menuToggle = document.getElementById('menuToggle');
         const sidebar = document.getElementById('sidebar');
         const overlay = document.getElementById('overlay');
@@ -864,7 +865,7 @@
             menuToggle.classList.remove('active');
         });
 
-        // Tutorial System
+        // Tutorial System - MODIFICADO
         const tutorialOverlay = document.getElementById('tutorialOverlay');
         const tutorialTooltip = document.getElementById('tutorialTooltip');
         const tutorialArrow = document.getElementById('tutorialArrow');
@@ -1069,7 +1070,7 @@
         tutorialNext.addEventListener('click', nextTutorialStep);
         tutorialSkip.addEventListener('click', endTutorial);
 
-        // Tutorial Trigger from Menu
+        // Tutorial Trigger from Menu - MODIFICADO
         tutorialTrigger.addEventListener('click', () => {
             if (localStorage.getItem('tutorialCompleted') === 'true') {
                 // Si ya completó, mostrar mensaje de confirmación
@@ -1077,6 +1078,9 @@
                     localStorage.removeItem('tutorialCompleted');
                     startTutorialProcess();
                 }
+            } else {
+                // Si no ha completado, iniciar tutorial
+                startTutorialProcess();
             }
         });
 
@@ -1215,7 +1219,7 @@
             }
         }
 
-        // Check if tutorial should be shown - CORREGIDO
+        // Check if tutorial should be shown - MODIFICADO
         function checkTutorialStatus() {
             const tutorialCompleted = localStorage.getItem('tutorialCompleted');
             console.log('Tutorial completado:', tutorialCompleted);
@@ -1223,7 +1227,10 @@
             // Mostrar tutorial SOLO si es la primera vez
             if (tutorialCompleted !== 'true') {
                 console.log('Iniciando tutorial INMEDIATAMENTE...');
-                startTutorialProcess();
+                // Usar un pequeño retraso para asegurar que todos los elementos estén cargados
+                setTimeout(() => {
+                    startTutorialProcess();
+                }, 500);
             }
         }
 
